fix: VoucherService 로직 일부 수정
- toList 메서드를 이용하게 수정.
- UUID로 convert하는 로직에 대한 예외처리를 따로 빼내게 수정.
-
Voucher 할당해제 시 setter를 이용해서 외부에서 값을 넣어주던 부분을 내부에서 숨겨서 처리하게 수정.